# docs/swagger.json
@@ -4,11 +4,11 @@
     ],
     "swagger": "2.0",
     "info": {
-        "description": "This is a sample wadzpay project.",
-        "title": "WadzPay Go API",
+        "description": "This is a sample  project.",
+        "title": "Vijay Go API",
         "termsOfService": "http://swagger.io/terms/",
         "contact": {
-            "name": "API Support - Blockchain Wadzpay",
+            "name": "API Support - Blockchain",
             "url": "http://www.swagger.io/support",
             "email": "support@swagger.io"
         },
@@ -61,6 +61,55 @@
                 }
             }
         },
+        "/currencies": {
+            "get": {
+                "description": "display dimiour accounts.",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "dimiour"
+                ],
+                "summary": "Get Dimiour accounts.",
+                "responses": {
+                    "200": {
+                        "description": "OK"
+                    }
+                }
+            }
+        },
+        "/currency/{coin}": {
+            "get": {
+                "description": "Get coin",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "dimiour"
+                ],
+                "summary": "coin value",
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "Enter coin type:",
+                        "name": "coin",
+                        "in": "query",
+                        "required": true
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK"
+                    }
+                }
+            }
+        },
         "/fundAccount": {
             "post": {
                 "description": "Funding the account",
@@ -77,7 +126,7 @@
                 "parameters": [
                     {
                         "type": "string",
-                        "description": "Add transaction details",
+                        "description": "Enter valid algo account address:",
                         "name": "account",
                         "in": "query",
                         "required": true
